traces/bug_234.txt
#234
kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:2017: error: Deadlock
  Potential self deadlock. `CheckpointTest_testDontExpelIfCursorAtMetadataItemWithSameSeqnoDisk_Test::TestBody` locks `&(this->manager->queueLock)` in `class CheckpointTest_testDontExpelIfCursorAtMetadataItemWithSameSeqnoDisk_Test` twice.

kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:2017:5: In method `CheckpointTest_testDontExpelIfCursorAtMetadataItemWithSameSeqnoDisk_Test::TestBody`
2015. TEST_P(CheckpointTest, testDontExpelIfCursorAtMetadataItemWithSameSeqnoDisk) {
2016.     manager->createSnapshot(0, 1000, 0, CheckpointType::Disk, 1001);
2017.     testDontExpelIfCursorAtMetadataItemWithSameSeqno();
          ^
2018. }
2019. 

kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:2017:5: Method call: `CheckpointTest::testDontExpelIfCursorAtMetadataItemWithSameSeqno`
2015. TEST_P(CheckpointTest, testDontExpelIfCursorAtMetadataItemWithSameSeqnoDisk) {
2016.     manager->createSnapshot(0, 1000, 0, CheckpointType::Disk, 1001);
2017.     testDontExpelIfCursorAtMetadataItemWithSameSeqno();
          ^
2018. }
2019. 

kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:1979:33: Method call: `CheckpointManager::registerCursorBySeqno`
1977.     // Add a cursor pointing to the dummy
1978.     std::string dcpCursor1(DCP_CURSOR_PREFIX + std::to_string(1));
1979.     CursorRegResult regResult = manager->registerCursorBySeqno(
                                      ^
1980.             dcpCursor1.c_str(), 1000, CheckpointCursor::Droppable::Yes);
1981. 

kv_engine/engines/ep/src/checkpoint_manager.cc:259:33:  locks `&(this->manager->queueLock)` in `class CheckpointTest_testDontExpelIfCursorAtMetadataItemWithSameSeqnoDisk_Test`
257.         uint64_t startBySeqno,
258.         CheckpointCursor::Droppable droppable) {
259.     std::lock_guard<std::mutex> lh(queueLock);
                                     ^
260.     return registerCursorBySeqno(lh, name, startBySeqno, droppable);
261. }

kv_engine/engines/ep/src/checkpoint_manager.cc:260:12: Method call: `CheckpointManager::registerCursorBySeqno`
258.         CheckpointCursor::Droppable droppable) {
259.     std::lock_guard<std::mutex> lh(queueLock);
260.     return registerCursorBySeqno(lh, name, startBySeqno, droppable);
                ^
261. }
262. 

kv_engine/engines/ep/src/checkpoint_manager.cc:283:13: Method call: `CheckpointManager::removeCursor`
281.     for (const auto& cursor : cursors) {
282.         if (cursor.first == name) {
283.             removeCursor(lh, cursor.second.get());
                 ^
284.             break;
285.         }

kv_engine/engines/ep/src/checkpoint_manager.cc:474:9:  locks `&(this->manager->queueLock)` in `class CheckpointTest_testDontExpelIfCursorAtMetadataItemWithSameSeqnoDisk_Test`
472.         queueLock.unlock();
473.         runGetItemsHook(cursor, vb.getId());
474.         queueLock.lock();
             ^
475.     }
476. 
